sumo/tests/marouter/errors/testsuite.marouter
# Errors in options
false_options

# Format errors in read O/D-matrices
format

# Incomplete (unknown) districts
incomplete_districts

# Incomplete (unknown) district connections
incomplete_connections

